--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,7 @@
 services:
   php:
     build: ./.docker/.
+    image: arthaudproust1/croupeirb-php
     env_file:
       - ./.env
     volumes:
@@ -21,14 +22,14 @@ services:
       - croupier-net
 
   mysql:
-    image: 'mysql/mysql-server:8.0'
+    image: "mysql/mysql-server:8.0"
     environment:
-      MYSQL_ROOT_PASSWORD: '${DB_PASSWORD}'
-      MYSQL_ROOT_HOST: '%'
-      MYSQL_DATABASE: '${DB_NAME}'
+      MYSQL_ROOT_PASSWORD: "${DB_PASSWORD}"
+      MYSQL_ROOT_HOST: "%"
+      MYSQL_DATABASE: "${DB_NAME}"
     volumes:
-      - 'croupier-mysql:/var/lib/mysql'
-      - './.docker/init.sql:/docker-entrypoint-initdb.d/init.sql'
+      - "croupier-mysql:/var/lib/mysql"
+      - "./.docker/init.sql:/docker-entrypoint-initdb.d/init.sql"
     networks:
       - croupier-net
 
